--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "framer-motion": "^11.5.4",
-    "next": "^14.2.11",
+    "framer-motion": "^11.7.0",
+    "next": "^14.2.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "eslint": "^8.57.1",
-    "eslint-config-next": "^14.2.11",
+    "eslint-config-next": "^14.2.13",
     "prettier": "^3.3.3"
-  }
+  },
+  "main": "next.config.js"
 }
